tests/fixtures/invalid/str_notin_float.py
# Cannot use 'not in' with Str and Float
x: bool = "hello" not in 1.0
